Inlämningsuppgift HTML & CSS
Björn Wiström ~ Portfolio

--- a/index.html
+++ b/index.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plutonium app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.2">
+    <title>El portafolio de Björn</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Lavishly+Yours&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Orbitron:wght@400..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Turret+Road:wght@200;300;400;500;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    
-    <h1>Plutonium app</h1>
 
-    <p>It´s the next big thing in tech.</p>
+<body>
+    <header>
+        <h1>W ~ Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+
+
+    </header>
+
+    <main>
+        <section>
+            <h2>Dreaming has no limit</h2>
+            <br>
+            <br>
+            <p>
+                In the world of code, where everything is possible,
+                where doors open and paths become visible,
+                where every line is a place for dreams,
+                and every function is a place for life.
+
+                A pixel dances like the light of stars,
+                in lines of code woven like soft fabrics.
+                HTML, CSS, JavaScript as poetry,
+                creating worlds of thought, where no one is free.
+
+                From blank screens to color and form,
+                what we build is like a soft concept,
+                an architecture of creativity,
+                that sets us free in the digital sphere.
+
+                Like an artist with brush and canvas,
+                we are developers with keyboard and screen.
+                We build bridges of data and design,
+                a place for every dream to grow and bloom.
+
+                So we write, test, change, and see,
+                with every click as we build and pray.
+                For in web development, where the future lives,
+                we are all creators, where the world survives.
+
+            </p>
+            <br>
+            <h3>
+                "The only way to learn to code is to write code." – Paul Halmos 💻
+            </h3>
+        </section>
+        <button class="cta-button">~ Click me;</button>
+
+    </main>
+
+    <footer>
+        &copy; Björn Wiström 2025
+    </footer>
+
+    <script src="scripts/script.js"></script>
+
 </body>
+
 </html>
