Inlämningsuppgift HTML & CSS
Björn Wiström ~ Portfolio

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 
 
         <footer>
-            &copy; Björn Wiström 2025 - Contact :
+            &copy; Björn Wiström 2025 ☆°
         </footer>
 
 
