--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        &copy; Björn Wiström 2025
+        &copy; Björn Wiström 2025 ☆°
     </footer>
 
     <script src="scripts/script.js"></script>
