--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
         </section>
 
         <footer>
-            &copy; Björn Wiström 2025
+            &copy; Björn Wiström 2025 ☆°
         </footer>
     </main>
 </body>
