--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="project.html">Project</a></li>
+                <li><a href="project.html">Projects</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
