--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1>W ~ Portfolio</h1>
+        <h1>W ~ Portfolioo</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
