--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Lavishly+Yours&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Orbitron:wght@400..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Turret+Road:wght@200;300;400;500;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Iceland&family=Indie+Flower&family=Mea+Culpa&family=Special+Elite&family=Syne+Mono&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <header>
-        <h1>W ~ Portfolioo</h1>
+        <h1>/* Portfolio */</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -30,39 +30,10 @@
 
     <main>
         <section>
-            <h2>Dreaming has no limit</h2>
-            <br>
-            <br>
-            <p>
-                In the world of code, where everything is possible,
-                where doors open and paths become visible,
-                where every line is a place for dreams,
-                and every function is a place for life.
-
-                A pixel dances like the light of stars,
-                in lines of code woven like soft fabrics.
-                HTML, CSS, JavaScript as poetry,
-                creating worlds of thought, where no one is free.
-
-                From blank screens to color and form,
-                what we build is like a soft concept,
-                an architecture of creativity,
-                that sets us free in the digital sphere.
-
-                Like an artist with brush and canvas,
-                we are developers with keyboard and screen.
-                We build bridges of data and design,
-                a place for every dream to grow and bloom.
-
-                So we write, test, change, and see,
-                with every click as we build and pray.
-                For in web development, where the future lives,
-                we are all creators, where the world survives.
-
-            </p>
-            <br>
+            <h2>Björn Wiström</h2>
+            <h2>Backend Webdevelopment</h2>
             <h3>
-                "The only way to learn to code is to write code." – Paul Halmos 💻
+                *"Behind every great website is a backend that never sleeps."* 💾
             </h3>
         </section>
         <button class="cta-button">~ Click me;</button>
