--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
     <main>
 
         <h2>&copy; Björn Wiström's Gallery</h2>
-        <h2>Real life gallery</h2>
+        <h2>Real life meaning and experiences</h2>
         <section class="gallery">
 
           <h3>
